--- a/packages/SystemUI/res/layout/volume_dialog.xml
+++ b/packages/SystemUI/res/layout/volume_dialog.xml
@@ -13,213 +13,164 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:sysui="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/volume_dialog"
-    android:layout_width="match_parent"
+    android:id="@+id/volume_dialog_container"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@android:color/transparent"
-    android:clipChildren="false"
-    android:clipToPadding="false"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/volume_dialog_panel_transparent_padding"
-    android:paddingLeft="@dimen/volume_dialog_panel_transparent_padding_left_right"
-    android:paddingRight="@dimen/volume_dialog_panel_transparent_padding_left_right"
-    android:paddingTop="@dimen/volume_dialog_panel_transparent_padding"
-    android:theme="@style/qs_theme">
+    android:background="@android:color/transparent">
 
-    <LinearLayout
+    <!-- right-aligned to be physically near volume button -->
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:id="@+id/volume_bt_rl"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|center_vertical|right"
+        android:layout_marginRight="@dimen/bt_tool_tip_right_margin"
+        android:layout_marginBottom="@dimen/bt_tool_tip_bottom_margin">
+    <ViewStub
+        android:id="@+id/bt_battery_tooltip_stub"
+        android:visibility="gone"
+        android:inflatedId="@+id/bt_battery_tooltip_view"
+        android:layout="@layout/bt_battery_tool_tip_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clipToPadding="false"
-        android:clipChildren="false"
-        android:orientation="horizontal">
+        android:layoutDirection="ltr"/>
+    </RelativeLayout>
 
-        <FrameLayout
+    <LinearLayout
+        android:id="@+id/volume_expand_immediately"
+        android:visibility="gone"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:background="@drawable/rounded_bg_full"
+        android:layout_gravity="center_horizontal|center_vertical|right"
+        android:layout_marginRight="@dimen/expand_right_margin"
+        android:layout_marginBottom="@dimen/expand_bottom_margin">
+
+        <com.android.keyguard.AlphaOptimizedImageButton
+            style="@style/VolumeButtons"
+            android:id="@+id/icon_expand_immediately"
+            android:tint="?android:attr/colorAccent"
+            android:src="@drawable/ic_chevron_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/volume_dialog"
+        android:minWidth="@dimen/volume_dialog_panel_width"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layoutDirection="rtl"
+        android:background="@android:color/transparent"
+        android:paddingRight="@dimen/volume_dialog_panel_transparent_padding"
+        android:paddingTop="@dimen/volume_dialog_panel_transparent_padding"
+        android:paddingBottom="@dimen/volume_dialog_panel_transparent_padding"
+        android:paddingLeft="@dimen/volume_dialog_panel_transparent_padding"
+        android:orientation="vertical"
+        android:clipToPadding="false">
+        <LinearLayout
+            android:id="@+id/main"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:clipToPadding="false">
+            <LinearLayout
+                android:id="@+id/volume_dialog_rows"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minWidth="@dimen/volume_dialog_panel_width"
+                android:gravity="center"
+                android:orientation="horizontal">
+                    <!-- volume rows added and removed here! :-) -->
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/ringer"
-            android:layout_width="@dimen/volume_dialog_panel_width"
-            android:layout_height="@dimen/volume_dialog_panel_width"
-            android:background="@drawable/rounded_volume_background"
-            android:elevation="@dimen/volume_dialog_elevation">
-
+            android:layout_width="@dimen/volume_dialog_ringer_size_width"
+            android:layout_height="@dimen/volume_dialog_ringer_size_height"
+            android:layout_marginBottom="@dimen/volume_dialog_spacer"
+            android:layout_marginTop="@dimen/volume_dialog_spacer"
+            android:orientation="vertical"
+            android:translationZ="@dimen/volume_dialog_elevation">
             <com.android.keyguard.AlphaOptimizedImageButton
                 android:id="@+id/ringer_icon"
                 style="@style/VolumeButtons"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/ringer_icon_marginRight"
+                android:layout_marginLeft="@dimen/ringer_icon_marginLeft"
+                android:layout_marginTop="@dimen/ringer_icon_marginTop"
+                android:layout_marginBottom="@dimen/ringer_icon_marginBottom"
+                android:padding="@dimen/volume_dialog_ringer_icon_padding"
+                android:layout_weight="1"
+                android:tint="@color/ringer_icon_tint"
+                android:cropToPadding="true"
+                android:soundEffectsEnabled="false"
+                android:background="@drawable/rounded_bg_full" />
+            <com.android.keyguard.AlphaOptimizedImageButton
+                android:id="@+id/extend_outputs"
+                style="@style/VolumeButtons"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="16dp"
-                android:tint="?android:attr/colorAccent" />
+                android:layout_marginRight="@dimen/extended_output_marginRight"
+                android:layout_marginLeft="@dimen/extended_output_marginLeft"
+                android:layout_marginTop="@dimen/extended_output_marginTop"
+                android:layout_marginBottom="@dimen/extended_output_marginBottom"
+                android:padding="@dimen/volume_dialog_ringer_icon_padding"
+                android:tint="@color/ringer_icon_tint"
+                android:layout_weight="1"
+                android:cropToPadding="true"
+                android:soundEffectsEnabled="false"
+                android:background="@drawable/rounded_bg_full" />
+            <include layout="@layout/volume_dnd_icon"
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:layout_marginTop="6dp"/>
+        </LinearLayout>
 
-            <include
-                layout="@layout/volume_dnd_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:layout_marginStart="6dp"
-                android:layout_marginTop="6dp" />
+        <FrameLayout
+            android:id="@+id/odi_captions"
+            android:layout_width="@dimen/volume_dialog_caption_size"
+            android:layout_height="@dimen/volume_dialog_caption_size"
+            android:layout_marginTop="@dimen/volume_dialog_spacer"
+            android:layout_marginRight="@dimen/odi_captions_margin_right"
+            android:gravity="right"
+            android:layout_gravity="right"
+            android:clipToPadding="false"
+            android:orientation="vertical"
+            android:background="@drawable/rounded_bg_full"
+            android:translationZ="@dimen/volume_dialog_elevation">
+            <com.android.systemui.volume.CaptionsToggleImageButton
+                android:id="@+id/odi_captions_icon"
+                android:src="@drawable/ic_volume_odi_captions_disabled"
+                style="@style/VolumeButtons"
+                android:layout_marginRight="@dimen/ringer_icon_marginRight"
+                android:layout_marginLeft="@dimen/ringer_icon_marginLeft"
+                android:layout_marginTop="@dimen/ringer_icon_marginTop"
+                android:layout_marginBottom="@dimen/ringer_icon_marginBottom"
+                android:padding="@dimen/volume_dialog_ringer_icon_padding"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:tint="@color/ringer_icon_tint"
+                android:layout_gravity="center"
+                android:soundEffectsEnabled="false"
+                sysui:optedOut="false"/>
         </FrameLayout>
+
     </LinearLayout>
 
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/volume_dialog_slider_height"
-        android:layout_marginTop="@dimen/volume_dialog_spacer"
-        android:clipChildren="false"
-        android:clipToPadding="false">
-
-        <LinearLayout
-            android:id="@+id/volume_dialog_rows"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clipChildren="false"
-            android:clipToPadding="false"
-            android:gravity="center"
-            android:minWidth="@dimen/volume_dialog_panel_width"
-            android:orientation="horizontal">
-            <!-- volume rows added and removed here! :-) -->
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/media_output_scroller"
-            android:layout_width="@dimen/volume_dialog_media_width"
-            android:layout_height="match_parent"
-            android:background="@drawable/rounded_volume_background"
-            android:clickable="false"
-            android:clipChildren="false"
-            android:clipToPadding="false"
-            android:elevation="@dimen/volume_dialog_elevation"
-            android:orientation="vertical"
-            android:visibility="gone">
-
-            <com.android.systemui.statusbar.AlphaOptimizedTextView
-                android:id="@+id/media_output_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:clickable="false"
-                android:ellipsize="marquee"
-                android:focusable="true"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:paddingBottom="5dp"
-                android:paddingLeft="8dp"
-                android:paddingRight="6dp"
-                android:paddingTop="5dp"
-                android:singleLine="true"
-                android:text="@string/media_output_title"
-                android:textColor="?android:attr/colorControlNormal"
-                android:textSize="15sp"
-                android:textStyle="bold" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/divider_stroke_color" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <ScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fillViewport="true"
-                    android:scrollbars="none">
-
-                    <LinearLayout
-                        android:id="@+id/media_output_container"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="top"
-                        android:gravity="top"
-                        android:layoutDirection="rtl"
-                        android:orientation="vertical">
-                        <!-- media output devices added and removed here -->
-                    </LinearLayout>
-                </ScrollView>
-            </LinearLayout>
-        </LinearLayout>
-    </FrameLayout>
-
-    <LinearLayout
+    <ViewStub
+        android:id="@+id/odi_captions_tooltip_stub"
+        android:inflatedId="@+id/odi_captions_tooltip_view"
+        android:layout="@layout/volume_tool_tip_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clipChildren="false"
-        android:layout_marginTop="@dimen/volume_dialog_spacer"
-        android:minWidth="@dimen/volume_dialog_panel_width"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:id="@+id/expandable_indicator_container"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/volume_dialog_spacer"
-            android:background="@drawable/rounded_volume_background"
-            android:elevation="@dimen/volume_dialog_elevation"
-            android:orientation="vertical">
-
-            <com.android.systemui.statusbar.phone.ExpandableIndicator
-                android:id="@+id/expandable_indicator"
-                style="@style/VolumeButtons"
-                android:layout_width="@dimen/volume_dialog_panel_width"
-                android:layout_height="@dimen/volume_dialog_button_height"
-                android:background="@drawable/ripple_drawable_20dp"
-                android:rotation="90" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/media_button_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/volume_dialog_spacer"
-            android:background="@drawable/rounded_volume_background"
-            android:elevation="@dimen/volume_dialog_elevation"
-            android:orientation="vertical"
-            android:visibility="gone">
-
-            <com.android.keyguard.AlphaOptimizedImageButton
-                android:id="@+id/media_button"
-                style="@style/VolumeButtons"
-                android:layout_width="@dimen/volume_dialog_panel_width"
-                android:layout_height="@dimen/volume_dialog_button_height"
-                android:background="@drawable/ripple_drawable_20dp"
-                android:padding="10dp"
-                android:src="@drawable/ic_speaker_bluetooth" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="start"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:id="@+id/odi_captions"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/rounded_volume_background"
-                android:elevation="@dimen/volume_dialog_elevation"
-                android:orientation="vertical"
-                android:visibility="gone">
-
-                <com.android.systemui.volume.CaptionsToggleImageButton
-                    android:id="@+id/odi_captions_icon"
-                    style="@style/VolumeButtons"
-                    android:layout_width="@dimen/volume_dialog_panel_width"
-                    android:layout_height="@dimen/volume_dialog_button_height"
-                    android:background="@drawable/ripple_drawable_20dp"
-                    android:src="@drawable/ic_volume_odi_captions_disabled"
-                    sysui:optedOut="false" />
-            </LinearLayout>
-
-            <ViewStub
-                android:id="@+id/odi_captions_tooltip_stub"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/volume_dialog_spacer"
-                android:inflatedId="@+id/odi_captions_tooltip_view"
-                android:layout="@layout/volume_tool_tip_view" />
-        </LinearLayout>
-    </LinearLayout>
-</LinearLayout>
+        android:layout_marginRight="@dimen/volume_tool_tip_right_margin"
+        android:layout_marginBottom="@dimen/volume_tool_tip_bottom_margin"/>
+</FrameLayout>
