--- a/packages/SystemUI/res/values-night/colors.xml
+++ b/packages/SystemUI/res/values-night/colors.xml
@@ -111,4 +111,11 @@
     <color name="volume_background_tint">#141414</color>
 
     <color name="divider_stroke_color">#434343</color>
+    
+      <color name="vol_pan_bkg">#0c0c0c</color>
+    <color name="vol_pan_bkg_transparent">#B30c0c0c</color>
+    <color name="custom_seekbar_internal">@*android:color/primary_dark_device_default_settings</color>
+    <color name="ringer_internal">@*android:color/primary_dark_device_default_settings</color>
+    <color name="ringer_icon_tint">@color/accent_mirror</color>
+    <color name="ripple_colors">#555555</color>
 </resources>
