--- a/packages/SystemUI/res/values/zeus_colors.xml
+++ b/packages/SystemUI/res/values/zeus_colors.xml
@@ -30,4 +30,14 @@
     <color name="dismiss_all_background_color">@*android:color/notification_material_background_color</color>
     <color name="dismiss_all_background_color_ripple">#a8a8a8</color>
     <color name="dismiss_all_icon_color">@*android:color/accent_device_default</color>
+    
+    <color name="vol_pan_bkg">#f2f2f2</color>
+    <color name="vol_pan_bkg_transparent">#B3f2f2f2</color>
+    <color name="accent_mirror">@*android:color/accent_device_default_light</color>
+    <color name="dismiss_confirm">#32CD32</color> 
+    <color name="dismiss_confirm_gentle">#009500</color>
+    <color name="custom_seekbar_internal">#90a9a9a9</color>
+    <color name="ringer_internal">#e5e5e5</color>
+    <color name="ringer_icon_tint">@color/accent_mirror</color>
+    <color name="ripple_colors">#9a9a9a</color>  
 </resources>
