--- a/packages/SystemUI/res/values/zeus_strings.xml
+++ b/packages/SystemUI/res/values/zeus_strings.xml
@@ -54,7 +54,8 @@
 
     <string name="quick_settings_sound_search">Sound search</string>
     <string name="quick_settings_sound_search_no_app">Sorry, but this doesn\'t work if you don\'t have a Sound search app.</string>
-
+    
+    <string name="unknown_battery_level">Unknown</string>
     <!-- DataSwitch Tile -->
     <string name="qs_data_switch_label">Switch data card</string>
     <string name="qs_data_switch_toast_0">Currently no SIM card is inserted</string>
